create github pages

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
     </amp-image-lightbox>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="team1 mbr-section cid-s3wyEcGisg" id="team1-h">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="team1 mbr-section cid-s3wyEcGisg" id="team1-h">
 
     
     
@@ -414,7 +414,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VSfpbydvD5YxBydUjUZaz2C0Hsqy/GdyH0i2tvpjNltKMsHqnspzfdIw+l2CbOiYbg7zaX1UypPYiwsBWiNxbMKPg1/dDvAUQvzCd35fF/YZp1fi42b0sWPXuqP0UvH3">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oHAPjweSNZtvvFkmrqAXTNe2ltSVi3BAGyB5wsYzzydnsJs28etOXOqhEjW9D86lVtWeS+cVrUEnSUgmFIphzWQRJHO4W4DkKnwdeCCm7ksEuZ+HvZIhGcWE7i4Jq7vA">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
