create github pages

--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 <br>3-Web Content Management System (WordPress).  
 <br>4-Digetal Marketing &amp; Graphic Design &amp; Video Maker.
 <br>      I graduated from the College of Aptech Sudan, obtaining an advanced degree in Software Engineering,  
-<br>During my past Carriers I worked as (computer technician, system analyst, web developer, software developer). &nbsp;<br></p>
+<br>Iam working now in Ae7 Consultant in dubai &amp; During my past Carriers I worked as (computer technician, system analyst, web developer, software developer). &nbsp;<br></p>
         <div class="mbr-section-btn align-right"><a class="btn btn-md btn-success display-4" href="page1.html">
                 My Works</a></div>
     </div>
@@ -53,5 +53,5 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
   
   
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section></body>
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section></body>
 </html>
