--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
                         <a href="page3.html"></a>
                     </amp-img>
                     <div class="icon-wrap" on="tap:lightbox1" role="button" tabindex="0">
-                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="currentColor">
+                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M10.875 17.534l-10.024 10.002c-1.192 1.19-1.033 2.844-0.138 3.745s2.55 1.062 3.747-0.135l9.987-9.987c0.654-0.628-0.336-1.575-0.943-0.943l-9.987 9.987c-0.772 0.772-1.425 0.575-1.859 0.138s-0.627-1.101 0.135-1.862l10.024-10.002c0.56-0.56-0.336-1.549-0.943-0.943zM20.266 2.742c-1.925 0.259-3.756 1.212-5.083 2.807-0.569 0.684 0.435 1.564 1.026 0.854 2.219-2.667 6.095-3.188 8.94-1.203 0.729 0.509 1.492-0.585 0.763-1.094-1.702-1.187-3.721-1.624-5.646-1.365zM21.333 0c-5.883 0-10.667 4.783-10.667 10.667s4.784 10.667 10.667 10.667c5.883 0 10.667-4.783 10.667-10.667s-4.784-10.667-10.667-10.667zM21.333 1.333c5.163 0 9.333 4.171 9.333 9.333s-4.171 9.333-9.333 9.333c-5.163 0-9.333-4.171-9.333-9.333s4.171-9.333 9.333-9.333z"></path>
 </svg></span>
@@ -68,7 +68,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
                             <a href="page2.html"></a>
                     </amp-img>
                     <div class="icon-wrap" on="tap:lightbox1" role="button" tabindex="0">
-                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="currentColor">
+                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M10.875 17.534l-10.024 10.002c-1.192 1.19-1.033 2.844-0.138 3.745s2.55 1.062 3.747-0.135l9.987-9.987c0.654-0.628-0.336-1.575-0.943-0.943l-9.987 9.987c-0.772 0.772-1.425 0.575-1.859 0.138s-0.627-1.101 0.135-1.862l10.024-10.002c0.56-0.56-0.336-1.549-0.943-0.943zM20.266 2.742c-1.925 0.259-3.756 1.212-5.083 2.807-0.569 0.684 0.435 1.564 1.026 0.854 2.219-2.667 6.095-3.188 8.94-1.203 0.729 0.509 1.492-0.585 0.763-1.094-1.702-1.187-3.721-1.624-5.646-1.365zM21.333 0c-5.883 0-10.667 4.783-10.667 10.667s4.784 10.667 10.667 10.667c5.883 0 10.667-4.783 10.667-10.667s-4.784-10.667-10.667-10.667zM21.333 1.333c5.163 0 9.333 4.171 9.333 9.333s-4.171 9.333-9.333 9.333c-5.163 0-9.333-4.171-9.333-9.333s4.171-9.333 9.333-9.333z"></path>
 </svg></span>
@@ -84,7 +84,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
                         <a href="page4.html"></a>
                     </amp-img>
                     <div class="icon-wrap" on="tap:lightbox1" role="button" tabindex="0">
-                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="currentColor">
+                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M10.875 17.534l-10.024 10.002c-1.192 1.19-1.033 2.844-0.138 3.745s2.55 1.062 3.747-0.135l9.987-9.987c0.654-0.628-0.336-1.575-0.943-0.943l-9.987 9.987c-0.772 0.772-1.425 0.575-1.859 0.138s-0.627-1.101 0.135-1.862l10.024-10.002c0.56-0.56-0.336-1.549-0.943-0.943zM20.266 2.742c-1.925 0.259-3.756 1.212-5.083 2.807-0.569 0.684 0.435 1.564 1.026 0.854 2.219-2.667 6.095-3.188 8.94-1.203 0.729 0.509 1.492-0.585 0.763-1.094-1.702-1.187-3.721-1.624-5.646-1.365zM21.333 0c-5.883 0-10.667 4.783-10.667 10.667s4.784 10.667 10.667 10.667c5.883 0 10.667-4.783 10.667-10.667s-4.784-10.667-10.667-10.667zM21.333 1.333c5.163 0 9.333 4.171 9.333 9.333s-4.171 9.333-9.333 9.333c-5.163 0-9.333-4.171-9.333-9.333s4.171-9.333 9.333-9.333z"></path>
 </svg></span>
@@ -100,7 +100,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
                         <a href="page5.html"></a>
                     </amp-img>
                     <div class="icon-wrap" on="tap:lightbox1" role="button" tabindex="0">
-                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="currentColor">
+                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M10.875 17.534l-10.024 10.002c-1.192 1.19-1.033 2.844-0.138 3.745s2.55 1.062 3.747-0.135l9.987-9.987c0.654-0.628-0.336-1.575-0.943-0.943l-9.987 9.987c-0.772 0.772-1.425 0.575-1.859 0.138s-0.627-1.101 0.135-1.862l10.024-10.002c0.56-0.56-0.336-1.549-0.943-0.943zM20.266 2.742c-1.925 0.259-3.756 1.212-5.083 2.807-0.569 0.684 0.435 1.564 1.026 0.854 2.219-2.667 6.095-3.188 8.94-1.203 0.729 0.509 1.492-0.585 0.763-1.094-1.702-1.187-3.721-1.624-5.646-1.365zM21.333 0c-5.883 0-10.667 4.783-10.667 10.667s4.784 10.667 10.667 10.667c5.883 0 10.667-4.783 10.667-10.667s-4.784-10.667-10.667-10.667zM21.333 1.333c5.163 0 9.333 4.171 9.333 9.333s-4.171 9.333-9.333 9.333c-5.163 0-9.333-4.171-9.333-9.333s4.171-9.333 9.333-9.333z"></path>
 </svg></span>
@@ -116,7 +116,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
                         <a href="index.html"></a>
                     </amp-img>
                     <div class="icon-wrap" on="tap:lightbox1" role="button" tabindex="0">
-                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="currentColor">
+                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M10.875 17.534l-10.024 10.002c-1.192 1.19-1.033 2.844-0.138 3.745s2.55 1.062 3.747-0.135l9.987-9.987c0.654-0.628-0.336-1.575-0.943-0.943l-9.987 9.987c-0.772 0.772-1.425 0.575-1.859 0.138s-0.627-1.101 0.135-1.862l10.024-10.002c0.56-0.56-0.336-1.549-0.943-0.943zM20.266 2.742c-1.925 0.259-3.756 1.212-5.083 2.807-0.569 0.684 0.435 1.564 1.026 0.854 2.219-2.667 6.095-3.188 8.94-1.203 0.729 0.509 1.492-0.585 0.763-1.094-1.702-1.187-3.721-1.624-5.646-1.365zM21.333 0c-5.883 0-10.667 4.783-10.667 10.667s4.784 10.667 10.667 10.667c5.883 0 10.667-4.783 10.667-10.667s-4.784-10.667-10.667-10.667zM21.333 1.333c5.163 0 9.333 4.171 9.333 9.333s-4.171 9.333-9.333 9.333c-5.163 0-9.333-4.171-9.333-9.333s4.171-9.333 9.333-9.333z"></path>
 </svg></span>
@@ -132,7 +132,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
                         <a href="page2.html"></a>
                     </amp-img>
                     <div class="icon-wrap" on="tap:lightbox1" role="button" tabindex="0">
-                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="currentColor">
+                        <span class="amp-iconfont mbri-search"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M10.875 17.534l-10.024 10.002c-1.192 1.19-1.033 2.844-0.138 3.745s2.55 1.062 3.747-0.135l9.987-9.987c0.654-0.628-0.336-1.575-0.943-0.943l-9.987 9.987c-0.772 0.772-1.425 0.575-1.859 0.138s-0.627-1.101 0.135-1.862l10.024-10.002c0.56-0.56-0.336-1.549-0.943-0.943zM20.266 2.742c-1.925 0.259-3.756 1.212-5.083 2.807-0.569 0.684 0.435 1.564 1.026 0.854 2.219-2.667 6.095-3.188 8.94-1.203 0.729 0.509 1.492-0.585 0.763-1.094-1.702-1.187-3.721-1.624-5.646-1.365zM21.333 0c-5.883 0-10.667 4.783-10.667 10.667s4.784 10.667 10.667 10.667c5.883 0 10.667-4.783 10.667-10.667s-4.784-10.667-10.667-10.667zM21.333 1.333c5.163 0 9.333 4.171 9.333 9.333s-4.171 9.333-9.333 9.333c-5.163 0-9.333-4.171-9.333-9.333s4.171-9.333 9.333-9.333z"></path>
 </svg></span>
@@ -153,7 +153,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
     </amp-image-lightbox>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="team1 mbr-section cid-s3wyEcGisg" id="team1-h">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="team1 mbr-section cid-s3wyEcGisg" id="team1-h">
 
     
     
@@ -322,7 +322,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O/486qNDtnQc16nJWvMvf81rbh3XWpFZ8PPBUuBAW46+TzwBKpgyZelfFCZIN8COLY2q34AGGv92MTKinbuBjZo9unsSlZc/vFUiMPTQghwOt7ug+41SGhUliWb10553">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vmBGUBNrKWS3UGXlxvgJ4NeuCwcVOLzrEgbBYLvsOK0thKfq9qJt5RmnQJumgg7yiRMcENDVdiUny7kHTU8dVsZ95pvpO0lGht7zdj4hDt7cT1rMXmcyRljsv/nB6pFO">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
