create github pages

--- a/page3.html
+++ b/page3.html
@@ -78,7 +78,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="contacts2 cid-s3x7KXWWP1" id="contacts2-q">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="contacts2 cid-s3x7KXWWP1" id="contacts2-q">
 
     
 
@@ -88,7 +88,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Qd5qYvyYdn9UDVlEWtRKt5mQLLn0Cn1KVXNoVu2h879cJwfh18imwOOrSjck0bmuVI+49wJFQc7fxmd7+BUmcM3Xy4j1z+KHZAtgHos4nUkK7LZdY27ZX0A/tMq13myJ">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0/pnIq1jTUykdQL+R0VcMysbX7OqXJgaM4SpisgFF+LU/qB3KieWvr1DlhBKh+RlGvYTna6juJbhr8gUKC+z8une3Q0i6Yrdh1dAE+3zJSJs2YSNp1IOg77O1liCKuGS">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
