--- a/page5.html
+++ b/page5.html
@@ -69,7 +69,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
         <h3 class="mbr-fonts-style mbr-section-title mbr-light align-center display-2">Zeda Slider&nbsp;</h3>
         <h4 class="mbr-fonts-style mbr-section-subtitle mbr-light align-center display-7"></h4>
         <div class="slider-box" data-delay="3000" data-autoplay="true"><amp-carousel class="carousel" width="13.5" height="9" layout="responsive" type="slides" autoplay="" delay="3000"><div class="carousel-img">
-                    <amp-img class="mobirise-loader" src="assets/images/055.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
+                    <amp-img class="mobirise-loader" src="assets/images/057.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -85,7 +85,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 </svg></span>
                     </div>
                 </div><div class="carousel-img">
-                    <amp-img class="mobirise-loader" src="assets/images/016.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
+                    <amp-img class="mobirise-loader" src="assets/images/018.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -145,7 +145,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
     </amp-image-lightbox>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="contacts2 cid-s3x7XqwPgz" id="contacts2-16">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="contacts2 cid-s3x7XqwPgz" id="contacts2-16">
 
     
 
@@ -155,7 +155,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Tem5jTgviR5mvxUyFsq8NAiq0F8setes33Mbgp4MiVgSGaxS8+KKx+M/u8ZL0ivTiOHk0Hycg42Xcb6E8cLys8odzC3e6XZAAUBMu3dRKYhAoSboozHgeBatULX80GTO">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SSCPNyM5ylCjkJHLwT4/kW3xnSD5mIL3LhmDbEpQf8A481NuAf+/7SN2QrrwcAufZqOO2ro4lKaJ5F4KH74bnfiuK4DSgXdK48FLS38w1IMJbMPdfMoQJqt5R2ZCTFS7">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
