create github pages

--- a/page1.html
+++ b/page1.html
@@ -155,7 +155,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="menu horizontal-menu cid-sb0SkRuXWN" id="menu2-1m">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="menu horizontal-menu cid-sb0SkRuXWN" id="menu2-1m">
 
     
     
