--- a/page5.html
+++ b/page5.html
@@ -66,7 +66,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
         <h3 class="mbr-fonts-style mbr-section-title mbr-light align-center display-2">Zeda Slider&nbsp;</h3>
         <h4 class="mbr-fonts-style mbr-section-subtitle mbr-light align-center display-7"></h4>
         <div class="slider-box" data-delay="3000" data-autoplay="true"><amp-carousel class="carousel" width="13.5" height="9" layout="responsive" type="slides" autoplay="" delay="3000"><div class="carousel-img">
-                    <amp-img class="mobirise-loader" src="assets/images/0513.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
+                    <amp-img class="mobirise-loader" src="assets/images/0515.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -82,7 +82,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 </svg></span>
                     </div>
                 </div><div class="carousel-img">
-                    <amp-img class="mobirise-loader" src="assets/images/0114.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
+                    <amp-img class="mobirise-loader" src="assets/images/0116.jpg" alt="Mobirise" width="13.5" height="9" layout="responsive" on="tap:lightbox1" role="button" tabindex="0">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -142,7 +142,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
     </amp-image-lightbox>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="contacts2 cid-s3x7XqwPgz" id="contacts2-16">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="contacts2 cid-s3x7XqwPgz" id="contacts2-16">
 
     
 
@@ -152,7 +152,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Dkv2soqKCWgPi+6bcqAsHafqRE0JUCIJ6kVOD+k6RGiJXUQTzwKpltY4/++PPN1pSGnMuEVCXY3P0T9/B6Sl/U8Jvci5miwdLkHXmz2rSJSeVnY5rzJ3Q7qqvAQ7a2Nd">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4PdlVkymwnG2/WhLyBpntXq0wFA7H0MaYdZ3gCgGAVr2jQvp8Pghob1iSJR9ivVwhE26bZftvsEbLR9KiyC1DNnDC09KqvzNwGZ1fTh3hXpQCYQQX9PbQIQj4kqIMJlR">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
