--- a/page2.html
+++ b/page2.html
@@ -76,7 +76,7 @@ body{font-family: Roboto;}blockquote{border-color: #197bc6;}div[submit-success] 
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="menu horizontal-menu cid-sb0SkRuXWN" id="menu2-1m">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="menu horizontal-menu cid-sb0SkRuXWN" id="menu2-1m">
 
     
     
